Remove h4 CSS rule in editor because it interferes with the collapsible header text. Fix paragraph spacing in save and publish modals.

--- a/core/templates/dev/head/css/oppia.css
+++ b/core/templates/dev/head/css/oppia.css
@@ -878,10 +878,6 @@ pre.oppia-pre-wrapped-text {
   font-size: 1.8em;
   margin: 0;
 }
-.oppia-editor-card-body h4 {
-  font-size: 1.4em;
-  margin: 0;
-}
 .oppia-editor-card-body form {
   margin: 0;
 }
